# cricbuzz_scraper

./: .gitignore  README.md  functions.py  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: isort.yml  python-app.yml
tests/: test_main.py
